Added sprite for breakable wall, added small blood sprite, added ASCII Title art